refactor codex/hard tests to remove jnose test smell failures